@@ -71,5 +71,7 @@ or other contributions: (in no particular order)
 * Henk Csaba
 * Vallimar de Morieve
 * Eric-Olivier LE BIGOT
+* Robin Breathe
+* Julien Antille
 
 thanks! (I've probably forgot someone, sorry. Drop my a mail and I'll add you)
